# simple-2d

./: .gitmodules  CMakeLists.txt  readme.md
dependencies/: lodepng.cmake
examples/: image.cpp
simple-2d/: 2d.cpp  image.cpp  input.cpp  random.cpp  setup.cpp
simple-2d/include/simple-2d/: 2d.h  gl.h  image.h  input.h  random.h  setup.h  shapes.h
src/: constellations.cpp  pong.cpp  template.cpp
