cmake_minimum_required(VERSION 3.20.0)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
project(simple-2d)

file(GLOB_RECURSE s2dsrc simple-2d/*.cpp)
add_library(simple-2d STATIC ${s2dsrc})
target_include_directories(simple-2d PUBLIC simple-2d/include)
target_include_directories(simple-2d PUBLIC dependencies/glfw/include)
target_include_directories(simple-2d PUBLIC ${CMAKE_BINARY_DIR}/glad/include)
target_link_libraries(simple-2d PUBLIC glfw)
target_link_libraries(simple-2d PUBLIC glad)
target_link_libraries(simple-2d PUBLIC lodepng)

set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
add_subdirectory(dependencies/glfw)
add_subdirectory(dependencies/glad)
include(dependencies/lodepng.cmake)

option(S2D_BUILD_EXAMPLES "Build examples" ON)

if(S2D_BUILD_EXAMPLES)
    file(GLOB thingies examples/*.cpp)

    foreach(thingy ${thingies})
        get_filename_component(name ${thingy} NAME_WE)
        add_executable(example-${name} ${thingy})
        target_link_libraries(example-${name} PRIVATE simple-2d)
    endforeach()
endif()